add report transactions page

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mike42/escpos-php": "^2.2"
+        "mike42/escpos-php": "^2.2",
+        "dompdf/dompdf": "^3.1"
     }
 }
